Another docs fix

--- a/docs/providers/overview.mdx
+++ b/docs/providers/overview.mdx
@@ -293,7 +293,7 @@ By leveraging Keep Providers, users are able to deeply integrate Keep with the t
 ></Card>
 
 <Card
-  title="Gitlab Pipelines"
+  title="GitLab Pipelines"
   href="/providers/documentation/gitlabpipelines-provider"
   icon={
     <img src="https://img.logo.dev/gitlab.com?token=pk_dfXfZBoKQMGDTIgqu7LvYg" />
