--- a/docs/snippets/providers/kubernetes-snippet-autogenerated.mdx
+++ b/docs/snippets/providers/kubernetes-snippet-autogenerated.mdx
@@ -64,6 +64,4 @@ actions:
 
 
 
-
-Check the following workflow example:
-- [gke.yml](https://github.com/keephq/keep/blob/main/examples/workflows/gke.yml)
+If you need workflow examples with this provider, please raise a [GitHub issue](https://github.com/keephq/keep/issues).
