--- a/docs/snippets/providers/s3-snippet-autogenerated.mdx
+++ b/docs/snippets/providers/s3-snippet-autogenerated.mdx
@@ -1,10 +1,12 @@
-{/* This snippet is automatically generated using scripts/docs_render_provider_snippets.py 
+{/* This snippet is automatically generated using scripts/docs_render_provider_snippets.py
 Do not edit it manually, as it will be overwritten */}
 
 ## Authentication
 This provider requires authentication.
-- **access_key**: S3 Access Token (Leave empty if using IAM role at EC2) (required: False, sensitive: True)
-- **secret_access_key**: S3 Secret Access Token (Leave empty if using IAM role at EC2) (required: False, sensitive: True)
+- **bucket**: S3 bucket name (required: True, sensitive: False)
+- **access_key**: AWS access key (unused in stub) (required: False, sensitive: True)
+- **secret_key**: AWS secret key (unused in stub) (required: False, sensitive: True)
+- **region**: AWS region (unused in stub) (required: False, sensitive: False)
 
 
 ## In workflows
@@ -18,8 +20,8 @@ steps:
     - name: Query s3
       provider: s3
       config: "{{ provider.my_provider_name }}"
-      with:
-        bucket: {value}  
+      
+        
 ```
 
 
